@@ -4,7 +4,6 @@ import com.switchfully.digibooky.domain.Author;
 import org.springframework.stereotype.Component;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Component
 public class AuthorMapper {
@@ -17,18 +16,16 @@ public class AuthorMapper {
     public List<Author> mapToDomain(List<AuthorDTO> authorDTOList){
         return authorDTOList.stream()
                 .map(this::mapToDomain)
-                .collect(Collectors.toList());
+                .toList();
     }
-    
+
     public AuthorDTO mapToDto(Author author) {
-        return new AuthorDTO()
-                .setFirstName(author.getFirstName())
-                .setLastName(author.getLastName());
+        return new AuthorDTO(author.getFirstName(), author.getLastName());
     }
 
     public List<AuthorDTO> mapToDTO(List<Author> authorList){
         return authorList.stream()
                 .map(this::mapToDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 }
